<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valid"
            android:id="@+id/buttonValid"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editName"
                android:hint="@string/name"
                android:textColorHint="#ffe37339"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editDescription"
                android:hint="@string/description"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editName"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editCategory"
                android:hint="@string/category"
                android:textColorHint="#ffe37339"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editDescription"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editCity"
                android:hint="@string/city"
                android:textColorHint="#ffe37339"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editCategory"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editAddress"
                android:hint="@string/address"
                android:textColorHint="#ffe37339"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editCity"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editPhone"
                android:hint="@string/phone"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/editAddress"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>