<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/buttonEdit"
        android:layout_gravity="right"
        android:layout_marginRight="25dp"
        android:layout_alignTop="@id/textViewName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textViewName"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textViewCategory"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/textViewName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textViewAddress"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/textViewCategory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textViewPhone"
        android:layout_marginLeft="25dp"
        android:layout_below="@id/textViewAddress"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPhone">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title"
        android:id="@+id/textViewDescription"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"/>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/buttonMenu"
        android:layout_alignTop="@+id/buttonEdit"
        android:layout_toLeftOf="@+id/buttonEdit"
        android:layout_toStartOf="@+id/buttonEdit" />

</RelativeLayout>